# ETL_CSV_to_SQL

./: .gitignore  README.md  allTheSql.sql  insertQuery.py  pyproject.toml
